--- a/UTS_Data_Warehouse.ipynb
+++ b/UTS_Data_Warehouse.ipynb
@@ -20,22 +20,20 @@
         "id": "H-z4QGlO8DC1"
       },
       "source": [
-        "## Import Semua Packages/Library yang Digunakan"
+        "### Import Library yang Digunakan"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 78,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
       "outputs": [],
       "source": [
         "# Input semua library yang dibutuhkan\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "\n",
+        "import pandas as pd"
       ]
     },
     {
@@ -49,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": 79,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -135,7 +133,7 @@
               "4  PMI-W005    Spanyol  Barcelona          22000.0"
             ]
           },
-          "execution_count": 158,
+          "execution_count": 79,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -148,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 80,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -234,7 +232,7 @@
               "4  ALT-W005        Kentucky     Lexington            11000"
             ]
           },
-          "execution_count": 159,
+          "execution_count": 80,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -247,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 81,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -333,7 +331,7 @@
               "4  PMI-F005    Spanyol          Madrid                          90000"
             ]
           },
-          "execution_count": 160,
+          "execution_count": 81,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -346,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 82,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -432,7 +430,7 @@
               "4  ALT-F005        Kentucky     Louisville                          45000"
             ]
           },
-          "execution_count": 161,
+          "execution_count": 82,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -445,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 83,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -543,7 +541,7 @@
               "4    PMI-T005   2022    Spanyol       1500000             150000000  PMI-W005"
             ]
           },
-          "execution_count": 162,
+          "execution_count": 83,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -556,7 +554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 84,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -661,7 +659,7 @@
               "4   ALT-W005  "
             ]
           },
-          "execution_count": 163,
+          "execution_count": 84,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -685,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 85,
       "metadata": {},
       "outputs": [
         {
@@ -706,7 +704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 86,
       "metadata": {},
       "outputs": [
         {
@@ -727,43 +725,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 87,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Jumlah data duplikat yang tersisa:  0\n"
+            "Jumlah data duplikat pada tabel Gudang Philip:  0\n"
           ]
         }
       ],
       "source": [
         "# Print sum of duplicates\n",
-        "print ( \"Jumlah data duplikat yang tersisa: \", duplicates.sum())"
+        "print(\"Jumlah data duplikat pada tabel Gudang Philip: \", table_gudang_p_df.duplicated().sum())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
+      "execution_count": 88,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Jumlah data duplikat pada tabel pabrik Altria:  0\n"
+            "Jumlah data duplikat pada tabel pabrik Altria:  5\n"
           ]
         }
       ],
       "source": [
         "# Print how many duplicates are in table_pabrik_al_df\n",
-        "print(\"Jumlah data duplikat pada tabel pabrik Altria: \",duplicates.sum())\n"
+        "print(\"Jumlah data duplikat pada tabel pabrik Altria: \", table_pabrik_al_df.duplicated().sum())\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": 89,
       "metadata": {},
       "outputs": [
         {
@@ -784,7 +782,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": 90,
       "metadata": {},
       "outputs": [
         {
@@ -797,7 +795,7 @@
       ],
       "source": [
         "# Print sum of duplicates\n",
-        "print ( \"Jumlah data duplikat yang tersisa: \", duplicates.sum())"
+        "print ( \"Jumlah data duplikat yang tersisa: \", table_pabrik_al_df.duplicated().sum())"
       ]
     },
     {
@@ -810,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": 91,
       "metadata": {},
       "outputs": [
         {
@@ -831,7 +829,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": 92,
       "metadata": {},
       "outputs": [
         {
@@ -852,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [
         {
@@ -877,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": 94,
       "metadata": {},
       "outputs": [
         {
@@ -910,7 +908,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": 95,
       "metadata": {
         "id": "YwJIRF_zxNhO"
       },
@@ -939,7 +937,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 175,
+      "execution_count": 96,
       "metadata": {},
       "outputs": [
         {
@@ -970,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 176,
+      "execution_count": 97,
       "metadata": {},
       "outputs": [
         {
@@ -1001,7 +999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 178,
+      "execution_count": 98,
       "metadata": {},
       "outputs": [
         {
@@ -1055,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 190,
+      "execution_count": 99,
       "metadata": {},
       "outputs": [
         {
@@ -1085,7 +1083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 191,
+      "execution_count": 100,
       "metadata": {},
       "outputs": [
         {
@@ -1122,7 +1120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 192,
+      "execution_count": 101,
       "metadata": {},
       "outputs": [
         {
@@ -1141,23 +1139,9 @@
         "# Find smallest warehouse capacity\n",
         "kapasitas_terkecil = gudang_df[\"Kapasitas (Ton)\"].min()\n",
         "\n",
-        "print(\"Kapasitas Gudang Terbesar:\", kapasitas_terbesar)\n",
+        "print(\"Kapasitas Gudang Terbesar:\", kapasitas_terbesar) \n",
         "print(\"Kapasitas Gudang Terkecil:\", kapasitas_terkecil)\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "- Mencari Tahu Produksi Terbesar dan Terkecil di Pabrik"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
