--- a/UTS_Data_Warehouse.ipynb
+++ b/UTS_Data_Warehouse.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 434,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 435,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -133,7 +133,7 @@
               "4  PMI-W005    Spanyol  Barcelona          22000.0"
             ]
           },
-          "execution_count": 79,
+          "execution_count": 435,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 436,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -232,7 +232,7 @@
               "4  ALT-W005        Kentucky     Lexington            11000"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 436,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 437,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -331,7 +331,7 @@
               "4  PMI-F005    Spanyol          Madrid                          90000"
             ]
           },
-          "execution_count": 81,
+          "execution_count": 437,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 438,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -430,7 +430,7 @@
               "4  ALT-F005        Kentucky     Louisville                          45000"
             ]
           },
-          "execution_count": 82,
+          "execution_count": 438,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -443,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 439,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -541,7 +541,7 @@
               "4    PMI-T005   2022    Spanyol       1500000             150000000  PMI-W005"
             ]
           },
-          "execution_count": 83,
+          "execution_count": 439,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -554,7 +554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 440,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -659,7 +659,7 @@
               "4   ALT-W005  "
             ]
           },
-          "execution_count": 84,
+          "execution_count": 440,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -683,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 441,
       "metadata": {},
       "outputs": [
         {
@@ -704,7 +704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 442,
       "metadata": {},
       "outputs": [
         {
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 443,
       "metadata": {},
       "outputs": [
         {
@@ -743,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 444,
       "metadata": {},
       "outputs": [
         {
@@ -761,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 445,
       "metadata": {},
       "outputs": [
         {
@@ -782,7 +782,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 446,
       "metadata": {},
       "outputs": [
         {
@@ -808,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 447,
       "metadata": {},
       "outputs": [
         {
@@ -829,7 +829,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 448,
       "metadata": {},
       "outputs": [
         {
@@ -850,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 449,
       "metadata": {},
       "outputs": [
         {
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 450,
       "metadata": {},
       "outputs": [
         {
@@ -908,7 +908,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 451,
       "metadata": {
         "id": "YwJIRF_zxNhO"
       },
@@ -937,7 +937,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 452,
       "metadata": {},
       "outputs": [
         {
@@ -968,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 453,
       "metadata": {},
       "outputs": [
         {
@@ -999,7 +999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 454,
       "metadata": {},
       "outputs": [
         {
@@ -1053,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 455,
       "metadata": {},
       "outputs": [
         {
@@ -1083,7 +1083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 456,
       "metadata": {},
       "outputs": [
         {
@@ -1120,7 +1120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 457,
       "metadata": {},
       "outputs": [
         {
@@ -1128,7 +1128,8 @@
           "output_type": "stream",
           "text": [
             "Kapasitas Gudang Terbesar: 25000.0\n",
-            "Kapasitas Gudang Terkecil: 30.0\n"
+            "Kapasitas Gudang Terkecil: 30.0\n",
+            "Kapasitas Gudang Rata-rata: 7800.725806451613\n"
           ]
         }
       ],
@@ -1139,8 +1140,193 @@
         "# Find smallest warehouse capacity\n",
         "kapasitas_terkecil = gudang_df[\"Kapasitas (Ton)\"].min()\n",
         "\n",
+        "# Find the average warehouse capacity\n",
+        "kapasitas_rata_rata = gudang_df[\"Kapasitas (Ton)\"].mean()\n",
+        "\n",
         "print(\"Kapasitas Gudang Terbesar:\", kapasitas_terbesar) \n",
-        "print(\"Kapasitas Gudang Terkecil:\", kapasitas_terkecil)\n"
+        "print(\"Kapasitas Gudang Terkecil:\", kapasitas_terkecil)\n",
+        "print(\"Kapasitas Gudang Rata-rata:\", kapasitas_rata_rata)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Mencari Tahu Jumlah Produksi Terbesar, Terkecil, dan Rata-rata di Pabrik"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 458,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Jumlah Produksi Terbesar: 150000\n",
+            "Jumlah Produksi Terkecil: 10\n",
+            "Rata-rata Jumlah Produksi: 30558.442211055277\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Find the largest production\n",
+        "produksi_terbesar = jumlah_produksi.max()\n",
+        "\n",
+        "# Find the smallest production\n",
+        "produksi_terkecil = jumlah_produksi.min()\n",
+        "\n",
+        "# Find the average production\n",
+        "rata_rata_produksi = jumlah_produksi.mean()\n",
+        "\n",
+        "print(\"Jumlah Produksi Terbesar:\", produksi_terbesar)\n",
+        "print(\"Jumlah Produksi Terkecil:\", produksi_terkecil)\n",
+        "print(\"Rata-rata Jumlah Produksi:\", rata_rata_produksi)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Konversi Satuan Ton Menjadi KG"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 459,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Data Hasil Konversi Gudang : \n",
+            "     GudangID                Negara             Kota  Kapasitas (Ton)  \\\n",
+            "0   PMI-W001             Indonesia         Surabaya          25000.0   \n",
+            "1   PMI-W002                 Rusia           Moskow          20000.0   \n",
+            "2   PMI-W003                Jerman          Hamburg          18000.0   \n",
+            "3   PMI-W004                Italia           Napoli          15000.0   \n",
+            "4   PMI-W005               Spanyol        Barcelona          22000.0   \n",
+            "..       ...                   ...              ...              ...   \n",
+            "95  ALT-W096         West Virginia       Huntington             70.0   \n",
+            "96  ALT-W097        South Carolina       Greenville             60.0   \n",
+            "97  ALT-W098                Hawaii       Pearl City             50.0   \n",
+            "98  ALT-W099                Alaska        Fairbanks             40.0   \n",
+            "99  ALT-W100  District of Columbia  Washington D.C.             30.0   \n",
+            "\n",
+            "    Kapasitas (KG)  \n",
+            "0       25000000.0  \n",
+            "1       20000000.0  \n",
+            "2       18000000.0  \n",
+            "3       15000000.0  \n",
+            "4       22000000.0  \n",
+            "..             ...  \n",
+            "95         70000.0  \n",
+            "96         60000.0  \n",
+            "97         50000.0  \n",
+            "98         40000.0  \n",
+            "99         30000.0  \n",
+            "\n",
+            "[186 rows x 5 columns]\n",
+            " Data Hasil Konversi Pabrik : \n",
+            "      PabrikID          Negara            Kota  KapasitasProduksi (Ton/Tahun)  \\\n",
+            "0    PMI-F001       Indonesia        Karawang                         150000   \n",
+            "1    PMI-F002           Rusia  St. Petersburg                         120000   \n",
+            "2    PMI-F003          Jerman          Berlin                         100000   \n",
+            "3    PMI-F004          Italia         Bologna                          80000   \n",
+            "4    PMI-F005         Spanyol          Madrid                          90000   \n",
+            "..        ...             ...             ...                            ...   \n",
+            "98   ALT-F096        Delaware           Dover                             40   \n",
+            "99   ALT-F097   West Virginia      Huntington                             30   \n",
+            "100  ALT-F098  South Carolina      Greenville                             20   \n",
+            "101  ALT-F099          Hawaii      Pearl City                             15   \n",
+            "102  ALT-F100          Alaska       Fairbanks                             10   \n",
+            "\n",
+            "     KapasitasProduksi (KG/Tahun)  \n",
+            "0                       150000000  \n",
+            "1                       120000000  \n",
+            "2                       100000000  \n",
+            "3                        80000000  \n",
+            "4                        90000000  \n",
+            "..                            ...  \n",
+            "98                          40000  \n",
+            "99                          30000  \n",
+            "100                         20000  \n",
+            "101                         15000  \n",
+            "102                         10000  \n",
+            "\n",
+            "[199 rows x 5 columns]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Convert Ton to KG in the warehouse table\n",
+        "gudang_df['Kapasitas (KG)'] = gudang_df['Kapasitas (Ton)'] * 1000\n",
+        "\n",
+        "# Convert Ton to KG in the factory table\n",
+        "pabrik_df['KapasitasProduksi (KG/Tahun)'] = pabrik_df['KapasitasProduksi (Ton/Tahun)'] * 1000\n",
+        "\n",
+        "# Print the updated data\n",
+        "print(\" Data Hasil Konversi Gudang : \"\"\\n\", gudang_df)\n",
+        "print(\" Data Hasil Konversi Pabrik : \"\"\\n\", pabrik_df)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Konversi Mata Uang (USD ke IDR) Pada Tabel Transaksi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 460,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   TransaksiID  Tahun                Negara  JumlahProduk  \\\n",
+            "0     PMI-T001   2022             Indonesia       2500000   \n",
+            "1     PMI-T002   2022                 Rusia       1800000   \n",
+            "2     PMI-T003   2022                Jerman       1200000   \n",
+            "3     PMI-T004   2022                Italia       1000000   \n",
+            "4     PMI-T005   2022               Spanyol       1500000   \n",
+            "..         ...    ...                   ...           ...   \n",
+            "95    ALT-T096   2022         West Virginia          7000   \n",
+            "96    ALT-T097   2022        South Carolina          6000   \n",
+            "97    ALT-T098   2022                Hawaii          5000   \n",
+            "98    ALT-T099   2022                Alaska          4000   \n",
+            "99    ALT-T100   2022  District of Columbia          3000   \n",
+            "\n",
+            "    TotalPenjualan (USD)  GudangID  TotalPenjualan (IDR)  \n",
+            "0              250000000  PMI-W001         4010000000000  \n",
+            "1              180000000  PMI-W002         2887200000000  \n",
+            "2              120000000  PMI-W003         1924800000000  \n",
+            "3              100000000  PMI-W004         1604000000000  \n",
+            "4              150000000  PMI-W005         2406000000000  \n",
+            "..                   ...       ...                   ...  \n",
+            "95                700000  ALT-W096           11228000000  \n",
+            "96                600000  ALT-W097            9624000000  \n",
+            "97                500000  ALT-W098            8020000000  \n",
+            "98                400000  ALT-W099            6416000000  \n",
+            "99                300000  ALT-W100            4812000000  \n",
+            "\n",
+            "[200 rows x 7 columns]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Define the exchange rate from USD to IDR\n",
+        "exchange_rate = 16040\n",
+        "\n",
+        "# Convert the 'TotalPenjualan (USD)' column to IDR\n",
+        "transaksi_df['TotalPenjualan (IDR)'] = transaksi_df['TotalPenjualan (USD)'] * exchange_rate\n",
+        "\n",
+        "# Display the updated table\n",
+        "print(transaksi_df)\n"
       ]
     }
   ],
