--- a/UTS_Data_Warehouse.ipynb
+++ b/UTS_Data_Warehouse.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 434,
+      "execution_count": 1,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 435,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -133,7 +133,7 @@
               "4  PMI-W005    Spanyol  Barcelona          22000.0"
             ]
           },
-          "execution_count": 435,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 436,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -232,7 +232,7 @@
               "4  ALT-W005        Kentucky     Lexington            11000"
             ]
           },
-          "execution_count": 436,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 437,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -331,7 +331,7 @@
               "4  PMI-F005    Spanyol          Madrid                          90000"
             ]
           },
-          "execution_count": 437,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 438,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -430,7 +430,7 @@
               "4  ALT-F005        Kentucky     Louisville                          45000"
             ]
           },
-          "execution_count": 438,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -443,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 439,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -541,7 +541,7 @@
               "4    PMI-T005   2022    Spanyol       1500000             150000000  PMI-W005"
             ]
           },
-          "execution_count": 439,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -554,7 +554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 440,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -659,7 +659,7 @@
               "4   ALT-W005  "
             ]
           },
-          "execution_count": 440,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -683,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 441,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -704,7 +704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 442,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 443,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -743,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 444,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -761,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 445,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -782,7 +782,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 446,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -808,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 447,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -829,7 +829,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 448,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -850,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 449,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 450,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -908,7 +908,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 451,
+      "execution_count": 18,
       "metadata": {
         "id": "YwJIRF_zxNhO"
       },
@@ -937,7 +937,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 452,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -968,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 453,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -999,7 +999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 454,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -1053,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 455,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -1061,7 +1061,13 @@
           "output_type": "stream",
           "text": [
             "Transaksi Terbesar: \n",
-            "\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "    TransaksiID  Tahun         Negara_x  JumlahProduk  TotalPenjualan (USD)  \\\n",
             "68    PMI-T073   2022  Amerika Serikat       3000000             300000000   \n",
             "\n",
@@ -1083,7 +1089,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 456,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -1120,7 +1126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 457,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -1157,32 +1163,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 458,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Jumlah Produksi Terbesar: 150000\n",
-            "Jumlah Produksi Terkecil: 10\n",
-            "Rata-rata Jumlah Produksi: 30558.442211055277\n"
+            "Jumlah Produksi Terbesar di Pabrik: 150000\n",
+            "Jumlah Produksi Terkecil di Pabrik: 10\n",
+            "Rata-rata Jumlah Produksi di Pabrik: 30558.442211055277\n"
           ]
         }
       ],
       "source": [
-        "# Find the largest production\n",
-        "produksi_terbesar = jumlah_produksi.max()\n",
+        "# Find the largest production in the factory\n",
+        "produksi_terbesar = pabrik_df['KapasitasProduksi (Ton/Tahun)'].max()\n",
         "\n",
-        "# Find the smallest production\n",
-        "produksi_terkecil = jumlah_produksi.min()\n",
+        "# Find the smallest production in the factory\n",
+        "produksi_terkecil = pabrik_df['KapasitasProduksi (Ton/Tahun)'].min()\n",
         "\n",
-        "# Find the average production\n",
-        "rata_rata_produksi = jumlah_produksi.mean()\n",
+        "# Find the average production in the factory\n",
+        "rata_rata_produksi = pabrik_df['KapasitasProduksi (Ton/Tahun)'].mean()\n",
         "\n",
-        "print(\"Jumlah Produksi Terbesar:\", produksi_terbesar)\n",
-        "print(\"Jumlah Produksi Terkecil:\", produksi_terkecil)\n",
-        "print(\"Rata-rata Jumlah Produksi:\", rata_rata_produksi)"
+        "print(\"Jumlah Produksi Terbesar di Pabrik:\", produksi_terbesar)\n",
+        "print(\"Jumlah Produksi Terkecil di Pabrik:\", produksi_terkecil)\n",
+        "print(\"Rata-rata Jumlah Produksi di Pabrik:\", rata_rata_produksi)\n"
       ]
     },
     {
@@ -1194,7 +1200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 459,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -1281,7 +1287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 460,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -1349,7 +1355,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.1"
+      "version": "3.9.0"
     },
     "orig_nbformat": 4,
     "vscode": {
